# staff-finder

./: .env.example  .gitignore  DEV.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  USAGE.md  example_schools.csv  example_schools_with_urls.csv  pyproject.toml  requirements.txt  system_prompt.md
.github/workflows/: ci.yml
src/staff_finder/: cli.py  config.py  io_csv.py  jina_client.py  limiters.py  logging_setup.py  models.py  openai_selector.py  query_planner.py  resolver.py  shortlist.py  url_utils.py
staff_finder/: __init__.py  cli.py  config.py  io_csv.py  jina_client.py  limiters.py  logging_setup.py  models.py  openai_selector.py  processor.py  query_planner.py  resolver.py  shortlist.py  url_utils.py
tests/: __init__.py  test_basic.py  test_config_precedence.py  test_networkless.py
