[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staff-finder"
version = "0.1.0"
description = "Async CLI tool that automatically discovers staff directory URLs for K-12 schools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Staff Finder Contributors"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
]

[project.scripts]
staff-finder = "staff_finder.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["staff_finder*"]
