[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staff-finder"
version = "0.3.0"
description = "Async CLI tool that automatically discovers staff directory URLs for K-12 schools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Staff Finder Contributors"}
]
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pandas>=2.2.2",
    "tenacity>=8.2.3",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
]

[project.scripts]
staff-finder = "staff_finder.cli:entrypoint"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["staff_finder*"]
