[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staff-finder"
version = "0.3.0"
description = "Async CLI tool that automatically discovers staff directory URLs for K-12 schools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Staff Finder Contributors"}
]
dependencies = [
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pandas>=2.2.2",
    "tenacity>=8.2.3",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
]

[project.scripts]
staff-finder = "staff_finder.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["staff_finder*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["staff_finder"]
